--- a/src/Makefile.windows
+++ b/src/Makefile.windows
@@ -5,11 +5,11 @@ PYTHON	 = python
 RC       = swars.rc
 RES      = swars.res
 ASFLAGS	 =
-CFLAGS	 = -include windows.config.h -Wall -Wextra -Wno-unused-parameter $(shell sdl-config --cflags)
-CPPFLAGS = -C -DNEED_UNDERSCORE=1
+CFLAGS	 = -mno-ms-bitfields -include windows.config.h -Wall -Wextra -Wno-unused-parameter $(shell sdl-config --cflags)
+CPPFLAGS = -mno-ms-bitfields -C -DNEED_UNDERSCORE=1
 LDFLAGS	 =
 MKWFLAGS = -u
-LIBS	 = -lmsvcrt $(shell sdl-config --libs) OpenAL32.lib d:\bin\gcc\lib\libvorbisfile.a d:\bin\gcc\lib\libvorbis.a d:\bin\gcc\lib\libogg.a -lpng -lz
+LIBS	 = -lmsvcrt $(shell sdl-config --libs) -lOpenAL32 -lvorbisfile -lvorbis -logg -lpng -lz
 RM	 = rm
 RENAME	 = fnmap_windows.conf
 TARGET	 = swars.exe
@@ -44,7 +44,6 @@ OBJ = \
 	wrappers_game.o \
 	wrappers_libc.o \
 	wrappers_util.o \
-	$(RES)
 
 .s.o:
 	$(CPP) $(CPPFLAGS) $< | $(AS) $(ASFLAGS) -o $@
