--- a/src/Makefile.windows
+++ b/src/Makefile.windows
@@ -5,11 +5,11 @@ PYTHON	 = python
 RC       = swars.rc
 RES      = swars.res
 ASFLAGS	 =
-CFLAGS	 = -mno-ms-bitfields -include windows.config.h -Wall -Wextra -Wno-unused-parameter $(shell sdl-config --cflags)
+CFLAGS	 = -mno-ms-bitfields -include windows.config.h -Wall -Wextra -Wno-unused-parameter $(shell sdl2-config --cflags)
 CPPFLAGS = -mno-ms-bitfields -C -DNEED_UNDERSCORE=1
 LDFLAGS	 =
 MKWFLAGS = -u
-LIBS	 = -lmsvcrt $(shell sdl-config --libs) -lOpenAL32 -lvorbisfile -lvorbis -logg -lpng -lz
+LIBS	 = -lmsvcrt $(shell sdl2-config --libs) -lOpenAL32 -lvorbisfile -lvorbis -logg -lpng -lz
 RM	 = rm
 RENAME	 = fnmap_windows.conf
 TARGET	 = swars.exe
